[project]
name = "agnetic-blog-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
    "langgraph-cli[inmem]>=0.4.29",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
    "watchdog>=6.0.0",
    "youtube-transcript-api>=1.2.4",
]
